<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usernameLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surnameLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/dniTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dniLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ageLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/jobTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jobLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/cvTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cvlabel"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteLabel" />
    </LinearLayout>
</FrameLayout>